--- a/coordinates.tex
+++ b/coordinates.tex
@@ -295,7 +295,7 @@ In case $B$ happens to be a column vector, there is yet another way to think of 
 		v\eqqc \begin{bmatrix}v^1 \\ \vdots \\ v^n\end{bmatrix}\in \K ^n.
 	\end{equation}
 	Then,
-	\begin{equation}
+	\begin{equation}\label{eqn3.2.30}
 		Av=v^1\cdot A\indices{^{\blankdot}_1}+\cdots +v^n\cdot A\indices{^{\blankdot}_n}.
 	\end{equation}
 	\begin{rmk}
