--- a/vector_spaces.tex
+++ b/vector_spaces.tex
@@ -531,7 +531,7 @@ Again, having defined a new type of object as well as the relevant notion of mor
 \end{exm}
 
 We now turn to the issue of equipping morphism sets of \emph{bimodules} with another bimodule structure.  As we can view any $\K$-module $V$ as a $\K$-$\Z$-bimodule, this will allow us to equip $\Mor _{\Mod{\K}}(V,W)$ with the structure of a bimodule.  We will find, however, that the bimodule structure on $\Mor _{\Mod{\K}}(V,W)$ is not just that of a left $\K$-module---if it were that simple, we wouldn't have needed to take this excursion on bimodules in the first place.
-\begin{exm}{$\Mor _{\Mod{R}}(V,W)$ is an $S$-$T$-bimodule}{}
+\begin{exm}{$\Mor _{\Mod{R}}(V,W)$ is an $S$-$T$-bimodule}{exm1.1.72}
 	Let $R$, $S$, and $T$ be rings, and let $V$ be an $R$-$S$-bimodule and let $W$ be an $R$-$T$-bimodule.  Then, as $V$ and $W$ are both left $R$-modules, and so while we cannot speak of linear-transformations, we can speak of left linear-transformations.  In fact, $\Mor _{\Mod{R}}(V,W)$ can be given the structure of an $S$-$T$-bimodule:\footnote{Addition is defined pointwise.  We don't mention this explicitly because addition is always pointwise and the sum of two linear-transformations is always again linear.}
 	\begin{equation}
 		[s\cdot T\cdot t](v)\ceqq T(v\cdot s)\cdot t.
@@ -543,7 +543,7 @@ We now turn to the issue of equipping morphism sets of \emph{bimodules} with ano
 		Check that this makes $\Mor _{\Mod{R}}(V,W)$ into an $S$-$T$-bimodule.
 	\end{exr}
 \end{exm}
-\begin{exm}{$\Mor _{\Mod*{S}}(V,W)$ is a $T$-$R$-bimodule}{}
+\begin{exm}{$\Mor _{\Mod*{S}}(V,W)$ is a $T$-$R$-bimodule}{exm1.1.75}
 	Let $R$, $S$, and $T$ be rings, let $V$ be an $R$-$S$-bimodule and let $W$ be a $T$-$S$-bimodule.\footnote{Note that $V$ is still an $R$-$S$-bimodule as in the previous example, but now $W$ is a $T$-$S$-bimodule (before it was an $R$-$T$-bimodule).}  Thus, in this case, we can speak of the \emph{right} linear-transformations.  In fact, $\Mor _{\Mod{}[S]}(V,W)$ can be given the structure of a $T$-$R$-bimodule:
 	\begin{equation}
 		[t\cdot T\cdot r](v)\ceqq t\cdot T(r\cdot v).
